eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 962458008299.dkr.ecr.eu-west-1.amazonaws.com/simplebank:ed5c202112816c10f1aab082687d0fe9c9622996
          ports:
            - containerPort: 8080
